manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: nodejs

spec:
  type: ClusterIP

  selector:
    app: nodejs-app

  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
